# audio_stem

./: .gitignore  AGENTS.md  README.md  package.json  pyproject.toml
audio-vocal-remover/: index.html  package.json  proxyOptions.js  vite.config.js
audio-vocal-remover/src/: AdminChecklist.jsx  AdminSection.jsx  App.jsx  JobDetailPanel.jsx  KaraokeStyleCard.jsx  TranscriptEditor.jsx  index.css  utils.js
audio_stem/: hooks.py  modules.txt  patches.txt
audio_stem/api/: admin.py  separation.py
audio_stem/config/: desktop.py  docs.py
audio_stem/integrations/: credit_management_client.py  elevenlabs_scribe_client.py  llm_provider.py  openai_transcription_client.py  transcription_provider.py  wavespeed_client.py  wavespeed_llm_client.py
audio_stem/public/: node_modules
audio_stem/tests/: base.py  cleanup_legacy_test_data.py  delete_all_jobs.py  test_classic_center_karaoke_style.py  test_cleanup_guard.py  test_gate10_1_transcription_quality.py  test_gate10_3_transcription_providers.py  test_gate10_4_llm_lyric_assistant.py  test_gate10_6_karaoke_timing.py  test_gate10_phase1.py  test_gate10_phase2.py  test_karaoke_audio_mode.py  test_karaoke_background_video.py  test_milestone3.py  test_milestone4.py  test_milestone5.py  test_milestone6.py  test_milestone7.py  test_milestone8.py  test_milestone8_1.py  test_milestone8_2.py  test_milestone8_3.py  test_milestone8_4.py  test_milestone8_5.py  test_separation.py  test_utils.py  test_whisper_input_check.py
audio_stem/utils/: abuse_protection.py  audio.py  audit_log.py  cancellation.py  cleanup.py  config_checklist.py  (+27 more)
(+57 files in other folders)
