[project]
name = "audio_stem"
authors = [
    { name = "-", email = "froxtreldoren@gmail.com"}
]
description = "-"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "wavespeed>=1.0.9",
    "mutagen>=1.47.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "pycaps-ai>=0.2.1",
    "playwright>=1.40",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
